fixing bugs on email sending
